feat: add open-source public preview
